--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,2 +1,13 @@
 
- 
+ version: '3'
+services:
+  web:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - 8080:80
+    depends_on:
+      - redis
+  redis:
+    image: redis:latest
