--- a/Deployment.yml
+++ b/Deployment.yml
@@ -16,8 +16,9 @@ spec:
         app: docker-node
     spec:
       containers:
-      - name: docker-node-app
-        image: neeeacr.azurecr.io/ne:1.0
+       - name: docker-node-app
+        image: acrkcr.azurecr.io/img:1.0
         ports:
         - containerPort: 80
-        
+      imagePullSecrets:
+       - name: new-secret
